--- a/miniprogram/pages/personal/personal.wxss
+++ b/miniprogram/pages/personal/personal.wxss
@@ -4,7 +4,7 @@ page{
 .profile-header{
   background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
   background-size: cover;
-  height: 480rpx;
+  height: 240rpx;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -14,8 +14,8 @@ page{
   text-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
 .avatar-url{
-  width: 200rpx;
-  height: 200rpx;
+  width: 140rpx;
+  height: 140rpx;
   display: block;
   overflow: hidden;
   border: 6rpx solid #fff;
@@ -65,7 +65,7 @@ page{
   color: #808080;
 }
 .content .iconfont{
-  color: #01b2fc;
+  color: #8fd3f4;
   font-weight: 600;
   margin-right: 30rpx;
 }
