--- a/miniprogram/pages/publish/publish.wxss
+++ b/miniprogram/pages/publish/publish.wxss
@@ -1,1 +1,102 @@
-/* pages/publish/publish.wxss */
+.container{
+  padding: 20rpx;
+}
+.bind {
+  padding-top: 120rpx;
+  display: flex;
+  justify-content: center;
+}
+.content{
+  width: 100%;
+  height: 360rpx;
+  box-sizing: border-box;
+}
+.footer{
+  display: flex;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  padding: 20rpx;
+  width: 100%;
+  box-sizing: border-box;
+  background: #f1f1f1;
+}
+.words-num{
+   flex: 1;
+   text-align: right;
+   color: #474747;
+   font-size: 32rpx;
+   padding-right: 30rpx;
+}
+.send-btn{
+   background: #8fd3f4;
+   color: #fff;
+   font-size: 24rpx;
+   margin-right: 20rpx;
+}
+/* 图片样式 */
+.image-list{
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20rpx;
+}
+.image-wrap{
+  width: 220rpx;
+  height: 220rpx;
+  margin-right: 10rpx;
+  margin-bottom: 10rpx;
+  position: relative;
+  text-align: center;
+  overflow: hidden;
+}
+.image{
+  width: 100%;
+  height: 100%;
+}
+.icon-shanchu{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 39rpx;
+  height: 39rpx;
+  background-color: #000;
+  border-radius:50%;
+  opacity: 0.4;
+  color: #fff;
+  text-align: center;
+  line-height: 40rpx;
+  font-size: 38rpx;
+  font-weight: bolder;
+}
+.selectphoto {
+  border: 2rpx dashed #8fd3f4;
+  position: relative;
+}
+
+.icon-jiahao {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #8fd3f4;
+  font-size: 60rpx;
+}
+.icon-weizhi-tianchong,.weizi{
+  color: #808080;
+}
+.icon-weizhi-tianchong{
+  font-size:50rpx;
+}
+
+.weizi{
+  font-size:40rpx;
+}
+.weiziitem{
+  display: flex;
+  margin-top:  40rpx;
+  margin-left: 20rpx;
+  align-items: center;
+}
+.showweizi{
+  color:#8fd3f4;
+}
